refactor: add 2 new columns to the rss table, refactor the job to only handle modified content
